MAR-3142: add scrollLock event listener to the flex-list view to prevent clipping of field dropdowns during inline edit

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -453,6 +453,9 @@
 
         > span {
           width: 100%;
+          &.list {
+            padding: 0 4px;
+          }
         }
         > .edit .select2-container-multi {
           position: absolute;
